This commit will
fix a create bug found on some entities

--- a/elements/crew-team-manager-finance/crew-team-manager-finance-create.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-create.html
@@ -126,14 +126,14 @@
                     bubbles: true,
                     composed: true
                 }));
-                _resetCreate();
+                this._resetCreate();
             }
 
             _handleActionCreate(e) {
                 this.$.firebase.saveValue('finances')
                     .then(() => {
                         this.$.firebase.setStoredValue(this.$.firebase.path, this.create);
-                        _resetCreate();
+                        this._resetCreate();
                         let _key = '';
                         for (let x = 10; x < this.$.firebase.path.length; x++) {
                             _key = _key + this.$.firebase.path[x];
