--- a/elements/crew-team-manager-oar/crew-team-manager-oar-create.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar-create.html
@@ -144,7 +144,7 @@
                     bubbles: true,
                     composed: true
                 }));
-                _resetCreate();
+                this._resetCreate();
             }
 
             _handleActionCreate(e) {
