--- a/elements/crew-team-manager-race/crew-team-manager-race-create.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-create.html
@@ -127,7 +127,7 @@
                     bubbles: true,
                     composed: true
                 }));
-                _resetCreate();
+                this._resetCreate();
             }
 
             _handleActionCreate(e) {
